# qidian-toolkits

./: .gitignore  README.md  llm-wiki-flow.md  qidian-extraction.py
qidian-extension/: content.js  manifest.json  planning-get-text-improvement.md  popup.html  popup.js
qidian-ocr/: ocr.py  pyproject.toml  requirements.txt  run_ocr.py  visualize.py
qidian-scraper/: chapter.txt  main.py  page_dump.html  pyproject.toml  scrape.py  (+1 more)
qidian-vietphase/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  PLAN-llm-wiki.md  PROGRESS-llm-wiki.md  README.md  docker-compose.yml  pyproject.toml
qidian-vietphase/backend/: config.py  main.py  shared.py
qidian-vietphase/backend/agent/: base.py  extractor.py  novel_loader.py  ocr_processor.py  orchestrator.py  preprocessor.py  rate_limiter.py  reviewer.py  state.py  tools.py  translator.py  vietphase_import.py  wiki_agent.py
qidian-vietphase/backend/db/: state.db
qidian-vietphase/backend/routers/: chapters.py  novels.py  ocr.py  translate.py  wiki.py
qidian-vietphase/frontend/: index.html  tokens.css
qidian-vietphase/frontend/css/: style.css
qidian-vietphase/frontend/js/: app.js
qidian-vietphase/frontend/src/: api_bridge.js  app.jsx  chapters.jsx  cmdk.jsx  components.jsx  glossary.jsx  output.jsx  settings.jsx  shell.jsx  styles.css  translation_view.jsx  wiki.jsx
qidian-vietphase/planning/: design-import-plan.md  mobile-responsive-plan.md
qidian-vietphase/rules/: _template.md
qidian-vietphase/rules/cau-tai-vo-dao-the-gioi-thanh-thanh/: novel.md
qidian-vietphase/secrets/: .gitignore
(+18 files in other folders)
