[project]
name = "qidian-vietphase"
version = "0.1.0"
description = "Chinese → Vietnamese novel translation agent"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "google-genai>=1.0.0",
    "python-dotenv>=1.0.0",
    "sse-starlette>=2.1.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "aiofiles>=23.0.0",
    "python-multipart>=0.0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
